--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="_ozK7zltziy_pfJpeR7dUpvspgIzyuDckYQOuz-PkPQ"
+    />
     <title>GSAP Video Scroll Scrubbing</title>
     <link rel="preload" as="video" href="src/assets/videos/put.mp4" />
     <link rel="stylesheet" href="src/style.css" />
