--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
       name="google-site-verification"
       content="_ozK7zltziy_pfJpeR7dUpvspgIzyuDckYQOuz-PkPQ"
     />
-    <title>GSAP Video Scroll Scrubbing</title>
+    <title>VPOS - A Phone Designed for You</title>
+    <meta name="description" content="Experience the VPOS phone, designed with precision, built for performance, and made for you. Explore its sleek aesthetics and powerful capabilities." />
+    <meta name="keywords" content="vpos, phone, mobile, technology, design, performance, aesthetics" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://video-play-on-scroll-gsap.netlify.app/" />
+    <meta property="og:title" content="VPOS - A Phone Designed for You" />
+    <meta property="og:description" content="Experience the VPOS phone, designed with precision, built for performance, and made for you. Explore its sleek aesthetics and powerful capabilities." />
+    <meta property="og:image" content="https://video-play-on-scroll-gsap.netlify.app/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://video-play-on-scroll-gsap.netlify.app/" />
+    <meta property="twitter:title" content="VPOS - A Phone Designed for You" />
+    <meta property="twitter:description" content="Experience the VPOS phone, designed with precision, built for performance, and made for you. Explore its sleek aesthetics and powerful capabilities." />
+    <meta property="twitter:image" content="https://video-play-on-scroll-gsap.netlify.app/twitter-image.jpg" />
+
     <link rel="preload" as="video" href="src/assets/videos/put.mp4" />
     <link rel="stylesheet" href="src/style.css" />
   </head>
